syntax = "proto3";
package grpc.gateway.testing;

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string message = 1;
}

service EchoService {
	rpc Echo(EchoRequest) returns (EchoResponse);
}